--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dateformat": "^4.5.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "mongodb": "^4.1.0",
+    "socket.io": "^4.1.3",
     "sqlite3": "^5.0.2"
   }
 }
